--- a/css/_global.scss
+++ b/css/_global.scss
@@ -31,7 +31,7 @@ body {
 .btn {
     border: 2px solid;
     border-radius: 40px;
-    padding: 12px 26px;
+    padding: 12px 15%;
     font-size: .875rem;
 }
 
