--- a/css/_hero.scss
+++ b/css/_hero.scss
@@ -23,7 +23,7 @@
         }
         .card-btn {
             background-color: $accent-color;
-            padding: 9px 53px;
+            padding: 9px 13%;
     
             &:hover {
                 box-shadow: 2px 2px 2px $dark-color;
